[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Top_downSPrite.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/1911-.45-ACP-Close-Single-Gunshot-B-www.fesliyanstudios.com.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Reloading-Magazine-www.fesliyanstudios.com.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Dry-Pistol-Gunfire-Single-A-www.fesliyanstudios.com.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Retro Gaming.ttf" type="DynamicFontData" id=6]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 6 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
z_index = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.98322, 1.98322 )
shape = SubResource( 1 )

[node name="Top_downSPrite" type="Sprite" parent="."]
position = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 33, 13.5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Reload_timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="no_ammo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 20.0
margin_top = 24.0
margin_right = 60.0
margin_bottom = 64.0
rect_scale = Vector2( 0.182988, 0.182988 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 4.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Reload_timer" to="." method="_on_Reload_timer_timeout"]
